fix(ui): hide scrollbar when sidebar is too small

--- a/apps/client/src/app/ide/side-bar/components/side-bar-section/side-bar-section.component.scss
+++ b/apps/client/src/app/ide/side-bar/components/side-bar-section/side-bar-section.component.scss
@@ -1,10 +1,13 @@
 .section {
 	overflow: hidden;
+	display: flex;
+	flex-direction: column;
 }
 
 .section-content {
 	height: 100%;
 	overflow-y: auto;
+	overflow-x: hidden;
 	padding-left: 8px;
 	padding-right: 8px;
 }
@@ -33,11 +36,6 @@
 	text-transform: uppercase;
 	align-items: center;
 	padding-top: 2px;
-
-	app-icon {
-		padding-top: 2px;
-		font-size: 18px;
-	}
 }
 
 ::ng-deep .section-actions {
